--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,2 +1,8 @@
-<h1>welcome to {{title}}</h1>
-<app-value></app-value>
+
+<div>
+    <h1>
+        Dating APP
+    </h1>
+    <app-value></app-value>
+
+</div>
